[gd_scene format=3 uid="uid://j4k766di8pxc"]

[ext_resource type="Script" uid="uid://colp3haerdlg4" path="res://scenes/char/statue.gd" id="1_gsdjt"]
[ext_resource type="PackedScene" uid="uid://03s4l0q2exir" path="res://scenes/generic/vessel.tscn" id="1_kr50t"]
[ext_resource type="Texture2D" uid="uid://cp1vw7g68g7d8" path="res://assets/graphics/characters/roguelikeChar_transparent.png" id="2_kr50t"]
[ext_resource type="Texture2D" uid="uid://c4of0xcfn0cpy" path="res://assets/graphics/characters/sword_slash.png" id="3_3lyig"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3lyig"]
radius = 9.0

[sub_resource type="AtlasTexture" id="AtlasTexture_em1bs"]
atlas = ExtResource("3_3lyig")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rn35"]
atlas = ExtResource("3_3lyig")
region = Rect2(0, 128, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kjrfb"]
atlas = ExtResource("3_3lyig")
region = Rect2(0, 256, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_se30j"]
atlas = ExtResource("3_3lyig")
region = Rect2(0, 384, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ktwa8"]
atlas = ExtResource("3_3lyig")
region = Rect2(0, 512, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_8b434"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_em1bs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rn35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kjrfb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_se30j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ktwa8")
}],
"loop": false,
"name": &"default",
"speed": 18.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_qqac2"]
radius = 12.0
height = 52.0

[node name="Statue" unique_id=517857439 instance=ExtResource("1_kr50t")]
collision_layer = 36
script = ExtResource("1_gsdjt")
max_health = 15

[node name="CollisionShape2D" parent="." index="0" unique_id=137211241]
shape = SubResource("CircleShape2D_3lyig")

[node name="Sprite2D" parent="." index="1" unique_id=416849066]
texture = ExtResource("2_kr50t")
region_enabled = true

[node name="Attack Cooldown" type="Timer" parent="." index="2" unique_id=450909245]
wait_time = 1.2
one_shot = true

[node name="Attacks" type="Node2D" parent="." index="3" unique_id=697894676]

[node name="UpAttack" type="Area2D" parent="Attacks" index="0" unique_id=3543164]
position = Vector2(-1, -17)
scale = Vector2(0.7, 0.7)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/UpAttack" index="0" unique_id=1159369426]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_8b434")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/UpAttack" index="1" unique_id=840537659]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_qqac2")
disabled = true

[node name="LeftAttack" type="Area2D" parent="Attacks" index="1" unique_id=1078339968]
position = Vector2(-17, -1)
rotation = -1.5707964
scale = Vector2(0.7, 0.7)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/LeftAttack" index="0" unique_id=1696091356]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_8b434")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/LeftAttack" index="1" unique_id=2131428244]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_qqac2")
disabled = true

[node name="DownAttack" type="Area2D" parent="Attacks" index="2" unique_id=1210446910]
position = Vector2(1, 17)
rotation = -3.1415925
scale = Vector2(0.7, 0.7)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/DownAttack" index="0" unique_id=837781785]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_8b434")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/DownAttack" index="1" unique_id=1721863652]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_qqac2")
disabled = true

[node name="RightAttack" type="Area2D" parent="Attacks" index="3" unique_id=1071707002]
position = Vector2(17, -1)
rotation = 1.5707964
scale = Vector2(0.7, 0.7)
collision_layer = 16
collision_mask = 2

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Attacks/RightAttack" index="0" unique_id=1556173854]
visible = false
texture_filter = 1
position = Vector2(5, 7)
rotation = -0.6981317
scale = Vector2(0.49999997, 0.49999997)
sprite_frames = SubResource("SpriteFrames_8b434")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attacks/RightAttack" index="1" unique_id=1013187745]
rotation = 1.5707964
shape = SubResource("CapsuleShape2D_qqac2")
disabled = true

[connection signal="body_entered" from="Attacks/UpAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/UpAttack/AnimatedSprite2D" to="." method="_on_up_atk_anim_finished"]
[connection signal="body_entered" from="Attacks/LeftAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/LeftAttack/AnimatedSprite2D" to="." method="_on_left_atk_anim_finished"]
[connection signal="body_entered" from="Attacks/DownAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/DownAttack/AnimatedSprite2D" to="." method="_on_down_atk_anim_finished"]
[connection signal="body_entered" from="Attacks/RightAttack" to="." method="_on_atk_body_entered"]
[connection signal="animation_finished" from="Attacks/RightAttack/AnimatedSprite2D" to="." method="_on_right_atk_anim_finished"]
